[gd_scene load_steps=11 format=4 uid="uid://dkmfae421te6a"]

[ext_resource type="Script" uid="uid://dd8gh6rhn2g1o" path="res://scripts/levels/level_1.gd" id="1_dopym"]
[ext_resource type="PackedScene" uid="uid://bu4uplrikwht3" path="res://scenes/levels/level_2.tscn" id="2_m7ahb"]
[ext_resource type="PackedScene" uid="uid://cifc518lollhl" path="res://scenes/levels/level_3.tscn" id="3_bfxgj"]
[ext_resource type="TileSet" uid="uid://d0btesf5evuvi" path="res://assets/texture pack/tiles.tres" id="3_m7ahb"]
[ext_resource type="PackedScene" uid="uid://15uoupcpxi20" path="res://scenes/enemies/knight.tscn" id="4_1seuy"]
[ext_resource type="PackedScene" uid="uid://5wd6f8wnvh8e" path="res://scenes/enemies/rogue.tscn" id="5_2r1tl"]
[ext_resource type="PackedScene" uid="uid://c2egw80ivqb1j" path="res://scenes/npcs/steve.tscn" id="7_oc4kc"]
[ext_resource type="Script" uid="uid://de67x4niml467" path="res://scripts/tools/player_detectors.gd" id="7_s8va5"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_u5sy4"]
size = Vector2(33, 49)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ootpb"]
size = Vector2(33, 50)

[node name="Level1" type="Node2D" node_paths=PackedStringArray("tiles", "checkpoints", "linked_levels_dict", "steve")]
script = ExtResource("1_dopym")
tiles = NodePath("Tiles")
enemies = Array[PackedScene]([ExtResource("5_2r1tl"), ExtResource("4_1seuy")])
checkpoints = [NodePath("DefaultSpawn")]
linked_levels_dict = {
NodePath("Tiles/PortalLevel2"): ExtResource("2_m7ahb"),
NodePath("Tiles/PortalLevel3"): ExtResource("3_bfxgj")
}
steve = NodePath("Steve")

[node name="Tiles" type="TileMapLayer" parent="."]
z_index = -1
tile_map_data = PackedByteArray("AAD8//z/AAAAAA8AAAD8//3/AAAAABAAAAD8//7/AAAAABMAAAD8////AAAAABQAAAD8/wAAAAAAABUAAAD9//z/AAACAA8AAAD9//3/AAABABIAAAD9//7/AAABABMAAAD9////AAABABQAAAD9/wAAAAABABUAAAD+//z/AAABAA8AAAD+//3/AAABABAAAAD+//7/AAACABMAAAD+////AAACABQAAAD+/wAAAAACABUAAAD///z/AAADAA8AAAD///3/AAADABAAAAD///7/AAADABMAAAD/////AAADABQAAAD//wAAAAADABUAAAAAAPz/AAAFAA8AAAAAAP3/AAAEABIAAAAAAP7/AAAEABMAAAAAAP//AAAEABQAAAAAAAAAAAAEABUAAAABAPz/AAAEAA8AAAABAP3/AAAEABAAAAABAP7/AAAFABMAAAABAP//AAAFABQAAAABAAAAAAAFABUAAAACAPz/AAAGAA8AAAACAP3/AAAGABAAAAACAP7/AAAGABMAAAACAP//AAAGABQAAAACAAAAAAAGABUAAAADAPz/AAAIAA8AAAADAP3/AAAHABIAAAADAP7/AAAHABMAAAADAP//AAAHABQAAAADAAAAAAAHABUAAAAEAPz/AAAHAA8AAAAEAP3/AAAHABAAAAAEAP7/AAAIABMAAAAEAP//AAAIABQAAAAEAAAAAAAIABUAAAD5//7/AAAEAAAAAAD5////AAAEAAEAAAD5/wAAAAAEAAIAAAD6//7/AAAFAAAAAAD6////AAAFAAEAAAD6/wAAAAAFAAIAAAD7//7/AAAGAAAAAAD7////AAAGAAEAAAD7/wAAAAAGAAIAAAD5/wEAAAAEAAAAAAD5/wIAAAAEAAEAAAD5/wMAAAAEAAIAAAD6/wEAAAAFAAAAAAD6/wIAAAAFAAEAAAD6/wMAAAAFAAIAAAD7/wEAAAAGAAAAAAD7/wIAAAAGAAEAAAD7/wMAAAAGAAIAAAD8/wEAAAAEAAAAAAD8/wIAAAAEAAEAAAD8/wMAAAAEAAIAAAD9/wEAAAAFAAAAAAD9/wIAAAAFAAEAAAD9/wMAAAAFAAIAAAD+/wEAAAAGAAAAAAD+/wIAAAAGAAEAAAD+/wMAAAAGAAIAAAD//wEAAAAEAAAAAAD//wIAAAAEAAEAAAD//wMAAAAEAAIAAAAAAAEAAAAFAAAAAAAAAAIAAAAFAAEAAAAAAAMAAAAFAAIAAAABAAEAAAAGAAAAAAABAAIAAAAGAAEAAAABAAMAAAAGAAIAAAACAAEAAAAEAAAAAAACAAIAAAAEAAEAAAACAAMAAAAEAAIAAAADAAEAAAAFAAAAAAADAAIAAAAFAAEAAAADAAMAAAAFAAIAAAAEAAEAAAAGAAAAAAAEAAIAAAAGAAEAAAAEAAMAAAAGAAIAAAAFAP7/AAAEAAAAAAAFAP//AAAEAAEAAAAFAAAAAAAEAAIAAAAGAP7/AAAFAAAAAAAGAP//AAAFAAEAAAAGAAAAAAAFAAIAAAAHAP7/AAAGAAAAAAAHAP//AAAGAAEAAAAHAAAAAAAGAAIAAAAFAAEAAAAEAAAAAAAFAAIAAAAEAAEAAAAFAAMAAAAEAAIAAAAGAAEAAAAFAAAAAAAGAAIAAAAFAAEAAAAGAAMAAAAFAAIAAAAHAAEAAAAGAAAAAAAHAAIAAAAGAAEAAAAHAAMAAAAGAAIAAAD2//7/AAAEAAAAAAD2////AAAEAAEAAAD2/wAAAAAEAAIAAAD3//7/AAAFAAAAAAD3////AAAFAAEAAAD3/wAAAAAFAAIAAAD4//7/AAAGAAAAAAD4////AAAGAAEAAAD4/wAAAAAGAAIAAAD2/wEAAAAEAAAAAAD2/wIAAAAEAAEAAAD2/wMAAAAEAAIAAAD3/wEAAAAFAAAAAAD3/wIAAAAFAAEAAAD3/wMAAAAFAAIAAAD4/wEAAAAGAAAAAAD4/wIAAAAGAAEAAAD4/wMAAAAGAAIAAAAIAAEAAAAEAAAAAAAIAAIAAAAEAAEAAAAIAAMAAAAEAAIAAAAJAAEAAAAFAAAAAAAJAAIAAAAFAAEAAAAJAAMAAAAFAAIAAAAKAAEAAAAGAAAAAAAKAAIAAAAGAAEAAAAKAAMAAAAGAAIAAAAIAP7/AAAEAAAAAAAIAP//AAAEAAEAAAAIAAAAAAAEAAIAAAAJAP7/AAAFAAAAAAAJAP//AAAFAAEAAAAJAAAAAAAFAAIAAAAKAP7/AAAGAAAAAAAKAP//AAAGAAEAAAAKAAAAAAAGAAIAAAD6//v/AAAAAAcAAAD6//z/AAAAAAgAAAD6//3/AAAAAAkAAAD7//v/AAABAAcAAAD7//z/AAABAAgAAAD7//3/AAABAAkAAAAFAPv/AAAAAAcAAAAFAPz/AAAAAAgAAAAFAP3/AAAAAAkAAAAGAPv/AAABAAcAAAAGAPz/AAABAAgAAAAGAP3/AAABAAkAAAD8//v/AAAAAAQAAAD9//v/AAABAAQAAAD+//v/AAACAAQAAAD///v/AAAAAAQAAAAAAPv/AAABAAQAAAABAPv/AAACAAQAAAACAPv/AAAAAAQAAAADAPv/AAABAAQAAAAEAPv/AAACAAQAAAA=")
tile_set = ExtResource("3_m7ahb")

[node name="PortalLevel2" type="Area2D" parent="Tiles" node_paths=PackedStringArray("parent")]
script = ExtResource("7_s8va5")
parent = NodePath("../..")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Tiles/PortalLevel2"]
position = Vector2(-79.5, -55.5)
shape = SubResource("RectangleShape2D_u5sy4")

[node name="PortalLevel3" type="Area2D" parent="Tiles" node_paths=PackedStringArray("parent")]
position = Vector2(0, -1)
script = ExtResource("7_s8va5")
parent = NodePath("../..")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Tiles/PortalLevel3"]
position = Vector2(96, -55)
shape = SubResource("RectangleShape2D_ootpb")

[node name="DefaultSpawn" type="Marker2D" parent="."]
position = Vector2(7, 16)

[node name="Steve" parent="." instance=ExtResource("7_oc4kc")]
position = Vector2(-136, 22)

[connection signal="body_entered" from="Tiles/PortalLevel2" to="Tiles/PortalLevel2" method="_on_body_entered"]
[connection signal="body_exited" from="Tiles/PortalLevel2" to="Tiles/PortalLevel2" method="_on_body_exited"]
[connection signal="mouse_entered" from="Tiles/PortalLevel2" to="Tiles/PortalLevel2" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Tiles/PortalLevel2" to="Tiles/PortalLevel2" method="_on_mouse_exited"]
[connection signal="body_entered" from="Tiles/PortalLevel3" to="Tiles/PortalLevel3" method="_on_body_entered"]
[connection signal="body_exited" from="Tiles/PortalLevel3" to="Tiles/PortalLevel3" method="_on_body_exited"]
[connection signal="mouse_entered" from="Tiles/PortalLevel3" to="Tiles/PortalLevel3" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Tiles/PortalLevel3" to="Tiles/PortalLevel3" method="_on_mouse_exited"]
